--- a/suporte.html
+++ b/suporte.html
@@ -50,10 +50,6 @@ EM BREVE AQUI AREA DE SUPORTE DO SERVIDOR
 </p>
 <br>
 <br>
-<br>
-<br>
-<span class="notification-bar alert alert-danger">Estas regras e observações podem mudar sem aviso prévio. Fique atento a elas!</span></p>
-<p><small><em>Escrito por TEKCRAFT. Última atualização em 22/09/20.</em></small></p>
 <br /><br />
 <br /><br /><br />
 <p style="text-align:center"><b>Redes Sociais: </b> 
@@ -64,9 +60,9 @@ EM BREVE AQUI AREA DE SUPORTE DO SERVIDOR
 		</p>	
 		</div>
 		<footer>
-			<p>Copyright &copy; 2020 MegaCraft</p>
+			<p>Copyright &copy; MegaCraft 2021</p>
 			<!-- Remove this part below if you want! -->
-			<p style="padding-right: 30px;">Desenvolvido por <a href="https://youtube.com/HARDTEK" target="_blank">TEKCraft</a></p>
+			<p style="padding-right: 30px;">Desenvolvido por <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</footer>
 	</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
