--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
 	</head>
 <body>
 	
-<embed height="60" type="audio/midi" width="144" src="musica.mp3" volume="60" loop="false" autostart="false" />	
-
+<audio controls>
+	<source src="musica.mp3" type="audio/mpeg">
+	Seu navegador não suporta áudio tag.
+</audio>
+	
+	
 <div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
   ❅
