--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
 	</head>
 <body>
 	
-<audio controls>
-	<source src="musica.mp3" type="audio/mpeg">
-	Seu navegador não suporta áudio tag.
-</audio>
+<embed name="GoodEnough" src="musica.mp3" loop="true" hidden="true" autostart="true">
 	
 	
 <div class="snowflakes" aria-hidden="true">
