--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</head>
 <body>
 
-<embed src="musica.mp3" loop="true" autostart="true" width="2" height="0">
+<embed src="musica.mp3" loop="true" autostart="true" width="2" height="0" volume="10">
 	
 	
 <div class="snowflakes" aria-hidden="true">
