--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</head>
 <body>	
 
-<embed src="musica.mp3" loop="true" autostart="true" width="2" height="0" volume="10">
+<embed src="musica.mp3" loop="true" autostart="true" width="2" height="0" >
 	
 	
 <div class="snowflakes" aria-hidden="true">
