--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
 					<li><a href="suporte.html" >Suporte</a></li>
 				</ul>
 		</div>
-			<h1 class="animate">ESTAMOS DE VOLTA! \0/</h1>
-			<h1 class="animate">Bem vindos ao Servidor <b>MegaCraft</b>!</h1>
+			<h1 class="animate">BEM VINDOS AO <b>MEGACRAFT</b>!</h1>
 			<div class="playercount">
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
