--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
 				</ul>
 		</div>
 			<h1 class="animate">BEM VINDOS AO <b>MEGACRAFT</b>!</h1>
+			<br /><br />
 			<div class="playercount">
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
-				<p>Venha jogar conosco, <b><span class="ip">megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
+				<p>Venha jogar conosco, ip: <b><span class="ip">megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
 			</div>
 			
 			<br /><br /><p style="text-align:center; color:#ffffff"><b>Redes Sociais: </b> <br />
@@ -106,7 +107,7 @@
 			
 		<p style="text-align:center; color:#ffffff"><small>Visitantes</small> <a href="https://www.hitwebcounter.com" target="_blank">
 		<img src="https://hitwebcounter.com/counter/counter.php?page=7666647&style=0007&nbdigits=7&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a></p>
-		<br />	<br />			
+		<br />	<br />	<br />		
 		<p style="text-align:center; color:#ffffff">Copyright © 2021 MegaCraft - Desenvolvido por <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</header>
 
