--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	
 	</head>
 <body>	
-<BGSOUND src="download/MoogCity.mid" loop=infinite>	
+<EMBED src="MoogCity.mid" autostart=true loop=true hidden=true>
 	
 <div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
