--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 	
 	</head>
 <body>	
-<EMBED src="MoogCity.mid" autostart=true loop=true hidden=true>
+	
+	
+<embed src="MoogCity.mp3" loop="true" autostart="true" width="2"  height="0">	
+	
+	
 	
 <div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
