--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
 <body>	
 	
 	
-<embed src="MoogCity.mp3" loop="true" autostart="true" width="2"  height="0">	
-	
+<audio controls autoplay>
+  <source src="MoogCity.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>	
 	
 	
 <div class="snowflakes" aria-hidden="true">
