--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
 <body>	
 	
 	
-<audio loop="true" autostart="true" hidden="true">
-  <source src="MoogCity.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>	
-	
+
+
+<div id="player">
+    <audio autoplay hidden>
+     <source src="MoogCity.mp3" type="audio/mpeg">
+                If you're reading this, audio isn't supported. 
+    </audio>
+</div>	
 	
 <div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
