--- a/index.html
+++ b/index.html
@@ -36,14 +36,12 @@
 <body>	
 	
 	
+<audio controls autoplay loop>
+  <source src="MoogCity.mp3" type="audio/ogg">
+  <embed src="MoogCity.mp3" autostart="true" loop="true" hidden="true"> 
+</audio>
 
-
-<div id="player">
-    <audio autoplay hidden>
-     <source src="MoogCity.mp3" type="audio/mpeg">
-                If you're reading this, audio isn't supported. 
-    </audio>
-</div>	
+	
 	
 <div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
