--- a/index.html
+++ b/index.html
@@ -36,11 +36,8 @@
 <body>	
 	
 	
-<audio controls autoplay loop>
-  <source src="MoogCity.mp3" type="audio/ogg">
-  <embed src="MoogCity.mp3" autostart="true" loop="true" hidden="true"> 
-</audio>
 
+<embed name="myMusic" loop="true" autoplay="true" hidden="true" src="MoogCity.mp3"></embed>
 	
 	
 <div class="snowflakes" aria-hidden="true">
