--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 	</head>
 <body>	
 	
-	
+<audio src="MoogCity.mp3" autoplay loop></audio>
 
-<embed name="myMusic" loop="true" autoplay="true" hidden="true" src="MoogCity.mp3"></embed>
 	
 	
 <div class="snowflakes" aria-hidden="true">
