--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
 	</head>
 <body>	
 	
-<audio src="MoogCity.mp3" autoplay loop></audio>
 
-	
+<audio controls autoplay loop>
+  <source src="MoogCity.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>	
 	
 <div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
