--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>	
 	
 
-<audio controls autoplay loop>
+<audio autoplay="true" loop="true">
   <source src="MoogCity.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>	
