--- a/index.html
+++ b/index.html
@@ -34,12 +34,10 @@
 	
 	</head>
 <body>	
-	
 
-<audio autoplay="true" loop="true">
-  <source src="MoogCity.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>	
+	<p><embed name="GoodEnough" srcMoogCity.mp3" loop="true" hidden="true" autostart="true"></p>	
+
+	
 	
 <div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
