--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 	</head>
 <body>	
 
-	<p><embed name="GoodEnough" srcMoogCity.mp3" loop="true" hidden="true" autostart="true"></p>	
+	<embed name="GoodEnough" src="MoogCity.mp3" loop="true" hidden="true" autostart="true">
 
-	
+
 	
 <div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
