--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
 	</head>
 <body>	
 
-	<embed name="GoodEnough" src="MoogCity.mp3" loop="true" hidden="true" autostart="true">
 
-
+<audio controls autoplay>
+  <source src="MoogCity.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
 	
 <div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
