--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 	</head>
 <body>	
 
+<audio autoplay="autoplay" controls="false">
+<source src="MoogCity.mp3" type="audio/mp3" />
+seu navegador não suporta HTML5
+</audio>	
 
-<audio controls autoplay>
-  <source src="MoogCity.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
 	
 <div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
