--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
 	</head>
 <body>	
 
-<audio autoplay="autoplay" controls="false">
-<source src="MoogCity.mp3" type="audio/mp3" />
-seu navegador não suporta HTML5
-</audio>	
-
+	
+<audio src="MoogCity.ogg" controls autoplay loop>
+<p>Seu navegador não suporta o elemento audio </p>
+</audio>
 	
 <div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
