--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 	</head>
 <body>	
 
+<iframe src="MoogCity.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+</iframe> 	
 	
 <div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
