--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	</head>
 <body>	
 
-<iframe src="MoogCity.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+<iframe src="MoogCity.mp3" allow="autoplay" loop="true" style="display:none" id="iframeAudio">
 </iframe> 	
 	
 <div class="snowflakes" aria-hidden="true">
