--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 	</head>
 <body>	
 
-<iframe src="MoogCity.mp3" allow="autoplay" style="display:none" id="iframeAudio">
-</iframe> 	
+	
 	
 <div class="snowflakes" aria-hidden="true">
   <div class="snowflake">
@@ -100,7 +99,10 @@
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
 				<p>Venha jogar conosco, ip: <b><span class="ip">megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
-			</div>
+			</div><br /><br />
+			<audio src="MoogCity.mp3" allow="autoplay" style="display:none" id="Player"></audio> 
+			
+			
 			
 			<br /><br /><p style="text-align:center; color:#ffffff"><b>Redes Sociais: </b> <br />
 	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="35px" height="35px" alt="Facebook MegaCraft"></a>
