--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
 				<!-- Make sure to do it for both examples below. -->
 				<p>Venha jogar conosco, ip: <b><span class="ip">megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
 			</div><br /><br />
-			<audio src="MoogCity.mp3" allow="autoplay" style="display:none" id="Player"></audio> 
-			
+			<audio src="MoogCity.mp3" controls autoplay>
+			<p>If you are reading this, it is because your browser does not support the audio element.</p>
+			</audio>
 			
 			
 			<br /><br /><p style="text-align:center; color:#ffffff"><b>Redes Sociais: </b> <br />
