--- a/index.html
+++ b/index.html
@@ -100,10 +100,8 @@
 				<!-- Make sure to do it for both examples below. -->
 				<p>Venha jogar conosco, ip: <b><span class="ip">megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
 			</div><br /><br />
-			<audio src="MoogCity.mp3" controls autoplay>
-			<p>If you are reading this, it is because your browser does not support the audio element.</p>
-			</audio>
-			
+			<embed src="MoogCity.mp3" width="180" height="90" loop="true" autostart="true" hidden="true" />
+
 			
 			<br /><br /><p style="text-align:center; color:#ffffff"><b>Redes Sociais: </b> <br />
 	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="35px" height="35px" alt="Facebook MegaCraft"></a>
