--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<!-- Make sure to do it for both examples below. -->
 				<p>Venha jogar conosco, ip: <b><span class="ip">megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
 			</div><br /><br />
-			<embed src="MoogCity.mp3" width="180" height="90" loop="true" autostart="true" hidden="true" />
+			<embed src="MoogCity.mp3" width="180" height="90" loop="true" autostart="true" hidden="false" />
 
 			
 			<br /><br /><p style="text-align:center; color:#ffffff"><b>Redes Sociais: </b> <br />
