--- a/index.html
+++ b/index.html
@@ -102,7 +102,12 @@
 				<p>Venha jogar conosco, ip: <b><span class="ip">megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
 
 			</div><br /><br />
-			<embed src="MoogCity.mp3" loop="true" autostart="true" hidden="false" />
+			<div id="player">
+    			<audio autoplay hidden>
+     			<source src="MoogCity.mp3" type="audio/mpeg">
+                	If you're reading this, audio isn't supported. 
+    			</audio>
+			</div>
 
 			
 			<br /><br /><p style="text-align:center; color:#ffffff"><b>Redes Sociais: </b> <br />
