--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			<div class="playercount">
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
-				<p>O Melhor Servidor de Minecraft Survival do Brasil!</p>
+				<p><b>O Melhor Servidor de Minecraft Survival do Brasil!</b></p>
 				<p>Venha jogar conosco, ip: <b><span class="ip">megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
 
 			</div><br /><br />
