--- a/votar.html
+++ b/votar.html
@@ -39,11 +39,10 @@
 			<div class="about-staff">
 				<div class="vote-section">
 					<h2 id="vote-section">Vote no servidor</h1></h2>
-					<h3>Por favor, considere votar no nosso Servidor usando os links abaixo! Isso nos ajuda grandemente!</h3>	
-				</div></div><br /><br />
-			
-			<p></p>
-			<div class="vote-container">
+					<h3>Por favor, considere votar no nosso Servidor usando os links abaixo! Isso nos ajuda grandemente!</h3>
+				</div>
+			</div><br />
+				<div class="vote-container">
 				<div class="vote">
 					<h2>MinecraftServers.org</h2>
 					<a href="https://minecraftservers.org/vote/589929" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
@@ -68,7 +67,7 @@
 		</div>
 <br>
 <br>
-<br /><br /><br />
+<br />
 <p style="text-align:center"><b>Redes Sociais: </b> 
 	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="35px" height="35px" alt="Facebook MegaCraft"></a>
 	<a href="https://instagram.com/MegaCraftBR" target="_blank"><img src="img/instagram.png" hidth="35px" height="35px" alt="Instagram MegaCraft"></a>
