--- a/votar.html
+++ b/votar.html
@@ -41,7 +41,7 @@
 					<h2 id="vote-section">Vote no servidor</h1></h2>
 					<h3>Por favor, considere votar no nosso Servidor usando os links abaixo! Isso nos ajuda grandemente!</h3>
 				</div>
-			</div><br />
+			</div>
 				<div class="vote-container">
 				<div class="vote">
 					<h2>MinecraftServers.org</h2>
@@ -65,8 +65,6 @@
 				</div>
 			</div>
 		</div>
-<br>
-<br>
 <br />
 <p style="text-align:center"><b>Redes Sociais: </b> 
 	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="25px" height="25px" alt="Facebook MegaCraft"></a>
