--- a/regras.html
+++ b/regras.html
@@ -40,7 +40,7 @@
 				<div class="abt-epr">
 					<h1 class="fade">Regas</h1>
 					<h3>Para que o servidor tenha uma boa qualidade, precisamos respeitar as regras, por favor, leia atentamente!</h3>	
-				</div></div><br /><br />
+				</div></div>
 <div align="left">
 <ol style="font-size: 18px;">
 <li>Respeito a todos, nunca ofenda a ninguém.</li>
