--- a/apoiadores.html
+++ b/apoiadores.html
@@ -7,7 +7,7 @@
 	<meta property="og:title" content="Mega Craft - Apoiadores">
 	<meta property="og:site_name" content="Mega Craft">
 	<meta property="og:description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'megacraftmc.com.br'.">
-	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
+	<meta property="og:image" content="https://megacraftmc.com.br/img/mcbanner.jpg">
 	<meta property="og:url" content="https://bybilly.uk/">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta charset="utf-8">
