--- a/apoiadores.html
+++ b/apoiadores.html
@@ -16,6 +16,13 @@
 	<link rel="stylesheet" type="text/css" href="css/staff.css">
 	<link rel="shortcut icon" href="favicon.ico" />
 	<script data-ad-client="ca-pub-3723447797304917" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+	
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3723447797304917"
+     crossorigin="anonymous"></script>
+	
+	
+
 </head>
 <body>
 	<div class="container">
