--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			<div class="playercount">
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
-				<p><strong>O Melhor Servidor de Minecraft Survival do Brasil!</strong></p>
+				<p><strong>UMA AVENTURA ÉPICA DE MAGIA!</strong></p>
 				<p>Venha jogar conosco, ip: <b><span class="ip">megacraftmc.com.br</span></b> e com mais outros <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> jogadores online.</p>
 			</div>
 			
