--- a/index.html
+++ b/index.html
@@ -137,13 +137,9 @@
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
 				<p><strong>PREPARE-SE PARA UMA AVENTURA ÉPICA DE MAGIA E SOBREVICÊNCIA!</strong></p>
-				<p>ip: <b><span class="ip">megacraftmc.com.br</span></b> </p>
-		
+				<p>ip: <b><span class="ip">megacraftmc.com.br</span></b> Temos <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> Jogadores online.</p>
 			<a href="#" target="_blank" class="button button1">Inicie sua jornada! →</a>
 			<a href="https://discord.gg/JNRCCebDmB" target="_blank" class="button button2">Acesse o nosso discord! <img src="https://www.freepnglogos.com/uploads/discord-logo-png/concours-discord-cartes-voeux-fortnite-france-6.png" width="16px" height="16px" /></a>
-			<br /><br />
-			<span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> Jogadores online.	
-			<br /><br />	
 			</div>
 			
 			<br /><br /><p style="text-align:center; color:#ffffff"><b>Redes Sociais: </b> <br />
