--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 			<div class="playercount">
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
-				<p><strong>PREPARE-SE PARA UMA AVENTURA ÉPICA DE MAGIA E SOBREVICÊNCIA!</strong></p>
+				<p><strong>PREPARE-SE PARA UMA AVENTURA ÉPICA DE MAGIA!</strong></p>
 				<p>ip: <b><span class="ip">megacraftmc.com.br</span></b> - Temos <span data-playercounter-ip="us-3.purplehost.com.br:10039">0</span> Jogadores online.</p>
 			<a href="#" target="_blank" class="button button1">Inicie sua jornada! →</a>
 			<a href="https://discord.gg/JNRCCebDmB" target="_blank" class="button button2">Acesse o nosso discord! <img src="https://www.freepnglogos.com/uploads/discord-logo-png/concours-discord-cartes-voeux-fortnite-france-6.png" width="16px" height="16px" /></a>
