--- a/votar.html
+++ b/votar.html
@@ -42,8 +42,13 @@
 		<div class="main-content">
 			<div class="about-staff">
 				<div class="vote-section">
-					<h2 id="vote-section">Vote no servidor</h1></h2>
-					<h3>Por favor, considere votar no nosso Servidor usando os links abaixo! Isso nos ajuda grandemente!</h3>
+					<h2 id="vote-section">Vote no MEGACRAFT</h1></h2>
+					<h3>A cada voto você recebe uma chave de voto para abrir caixas na /caixa e ganhar dinheiro ou itens.<br />
+					Quanto mais você votar mais prêmios e chaves você pode ganhar.<br />
+					A cada 10 votos você recebe uma 5 Chaves Normal e 5 Mil em Dinheiro.<br />
+					A cada 20 votos você recebe uma 10 Chaves Normal e 10 Mil em Dinheiro.<br />
+					A cada 40 votos você recebe uma 1 Chaves Rara e 20 Mil em Dinheiro.<br />
+					A cada 80 votos você recebe uma 1 Chaves Épica e 30 Mil em Dinheiro.<br />	
 				</div>
 			</div>
 				<div class="vote-container">
@@ -52,8 +57,8 @@
 					<a href="https://minecraftservers.org/vote/589929" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
-					<h2>MinecraftList.org</h2>
-					<a href="https://minecraftlist.org/vote/25780" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<h2>PlanetMinecraft.com</h2>
+					<a href="https://www.planetminecraft.com/server/megacraft-uma-aventura-pica-de-magia/vote/" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
 					<h2>Minecraft-MP.com</h2>
@@ -67,6 +72,18 @@
 					<h2>McCommunity.net</h2>
 					<a href="https://mc-server-list.com/server/794-MEGACRAFT/vote/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
+				<div class="vote">
+					<h2>Top.Org</h2>
+					<a href="https://topg.org/minecraft-servers/server-610800"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+				</div>
+				<div class="vote">
+					<h2>McCommunity.net</h2>
+					<a href="https://minecraft-server-list.com/server/485094/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+				</div>
+				<div class="vote">
+					<h2>Minecraft-Server.Net</h2>
+					<a href="https://minecraft-server.net/vote/megacraftmc/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+				</div>					
 			</div>
 		</div>
 <br />
