--- a/votar.html
+++ b/votar.html
@@ -69,7 +69,7 @@
 					<a href="http://topminecraftservers.org/vote/12826"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
-					<h2>McCommunity.net</h2>
+					<h2>Mc-Server-List.com</h2>
 					<a href="https://mc-server-list.com/server/794-MEGACRAFT/vote/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
@@ -77,11 +77,11 @@
 					<a href="https://topg.org/minecraft-servers/server-610800"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
-					<h2>McCommunity.net</h2>
+					<h2>Minecraft=Server-List.com</h2>
 					<a href="https://minecraft-server-list.com/server/485094/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
-					<h2>Minecraft-Server.Net</h2>
+					<h2>Minecraft-Server.net</h2>
 					<a href="https://minecraft-server.net/vote/megacraftmc/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>					
 			</div>
