--- a/votar.html
+++ b/votar.html
@@ -77,7 +77,7 @@
 					<a href="https://topg.org/minecraft-servers/server-610800"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
-					<h2>Minecraft=Server-List.com</h2>
+					<h2>Minecraft-Server-List.com</h2>
 					<a href="https://minecraft-server-list.com/server/485094/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
