--- a/votar.html
+++ b/votar.html
@@ -43,12 +43,12 @@
 			<div class="about-staff">
 				<div class="vote-section">
 					<h2 id="vote-section">Vote no MEGACRAFT</h1></h2>
-					<h3>A cada voto você recebe uma chave de voto para abrir caixas na /caixa e ganhar dinheiro ou itens.<br />
+					<h3>A cada voto você recebe uma chave para abrir caixas no Spawn e ganhar dinheiro ou itens.<br />
 					Quanto mais você votar mais prêmios e chaves você pode ganhar.<br />
-					A cada 10 votos você recebe uma 5 Chaves Normal e 5 Mil em Dinheiro.<br />
-					A cada 20 votos você recebe uma 10 Chaves Normal e 10 Mil em Dinheiro.<br />
-					A cada 40 votos você recebe uma 1 Chaves Rara e 20 Mil em Dinheiro.<br />
-					A cada 80 votos você recebe uma 1 Chaves Épica e 30 Mil em Dinheiro.<br />	
+					A cada <font style="color:Tomato;">10 votos</font> você recebe uma 5 Chaves Normal e 5 Mil em Dinheiro.<br />
+					A cada <font style="color:Tomato;">20 votos</font> você recebe uma 10 Chaves Normal e 10 Mil em Dinheiro.<br />
+					A cada <font style="color:Tomato;">40 votos</font> você recebe uma 1 Chaves Rara e 20 Mil em Dinheiro.<br />
+					A cada <font style="color:Tomato;">80 votos</font> você recebe uma 1 Chaves Épica e 30 Mil em Dinheiro.<br />	
 				</div>
 			</div>
 				<div class="vote-container">
