--- a/votar.html
+++ b/votar.html
@@ -47,8 +47,8 @@
 					Quanto mais você votar mais prêmios e chaves você pode ganhar.<br />
 					A cada <font style="color:Tomato;">10 votos</font> você recebe uma 5 Chaves Normal e 5 Mil em Dinheiro.<br />
 					A cada <font style="color:Tomato;">20 votos</font> você recebe uma 10 Chaves Normal e 10 Mil em Dinheiro.<br />
-					A cada <font style="color:Tomato;">40 votos</font> você recebe uma 1 Chaves Rara e 20 Mil em Dinheiro.<br />
-					A cada <font style="color:Tomato;">80 votos</font> você recebe uma 1 Chaves Épica e 30 Mil em Dinheiro.<br />	
+					A cada <font style="color:Tomato;">40 votos</font> você recebe uma 1 Chave Rara e 20 Mil em Dinheiro.<br />
+					A cada <font style="color:Tomato;">80 votos</font> você recebe uma 1 Chave Épica e 30 Mil em Dinheiro.<br />	
 				</div>
 			</div>
 				<div class="vote-container">
