--- a/votar.html
+++ b/votar.html
@@ -78,7 +78,7 @@
 				</div>
 				<div class="vote">
 					<h2>Minecraft-Server-List.com</h2>
-					<a href="https://minecraft-server-list.com/server/485094/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<a href="https://minecraft-server-list.com/server/485094/vote/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
 					<h2>Minecraft-Server.net</h2>
