--- a/votar.html
+++ b/votar.html
@@ -45,10 +45,10 @@
 					<h2 id="vote-section">Vote no MEGACRAFT</h1></h2>
 					<h3>A cada voto você recebe uma chave para abrir caixas no Spawn e ganhar dinheiro ou itens.<br />
 					Quanto mais você votar mais prêmios e chaves você pode ganhar.<br />
-					A cada <font style="color:Tomato;">10 votos</font> você recebe uma 5 Chaves Normal e 5 Mil em Money.<br />
-					A cada <font style="color:Tomato;">20 votos</font> você recebe uma 10 Chaves Normal e 10 Mil em Money.<br />
-					A cada <font style="color:Tomato;">40 votos</font> você recebe uma 1 Chave Rara e 20 Mil em Money.<br />
-					A cada <font style="color:Tomato;">80 votos</font> você recebe uma 1 Chave Épica e 30 Mil em Money.<br />	
+					A cada <font style="color:Tomato;">10 votos</font> você recebe 5 Chaves Normal e 5 Mil em Money.<br />
+					A cada <font style="color:Tomato;">20 votos</font> você recebe 10 Chaves Normal e 10 Mil em Money.<br />
+					A cada <font style="color:Tomato;">40 votos</font> você recebe 1 Chave Rara e 20 Mil em Money.<br />
+					A cada <font style="color:Tomato;">80 votos</font> você recebe 1 Chave Épica e 30 Mil em Money.<br />	
 				</div>
 			</div>
 				<div class="vote-container">
