--- a/loja.html
+++ b/loja.html
@@ -60,7 +60,7 @@ EM BREVE AQUI OS PRODUTOS DA LOJA DO SERVIDOR
 <p style="text-align:center"><b>Redes Sociais: </b> 
 	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="35px" height="35px" alt="Facebook MegaCraft"></a>
 	<a href="https://instagram.com/MegaCraftBR" target="_blank"><img src="img/instagram.png" hidth="35px" height="35px" alt="Instagram MegaCraft"></a>
-	<a href="https://discord.megacraft.com.br" target="_blank"><img src="img/discord.png" hidth="35px" height="35px" alt="Discord MegaCraft"></a>
+	<a href="https://discord.gg/JNRCCebDmB" target="_blank"><img src="img/discord.png" hidth="35px" height="35px" alt="Discord MegaCraft"></a>
 	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="35px" height="35px" alt="Twitter MegaCraft"></a>
 		</p>	
 		</div>
