--- a/votar.html
+++ b/votar.html
@@ -90,7 +90,7 @@
 <p style="text-align:center"><b>Redes Sociais: </b> 
 	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="25px" height="25px" alt="Facebook MegaCraft"></a>
 	<a href="https://instagram.com/MegaCraftBR" target="_blank"><img src="img/instagram.png" hidth="25px" height="25px" alt="Instagram MegaCraft"></a>
-	<a href="https://discord.megacraft.com.br" target="_blank"><img src="img/discord.png" hidth="25px" height="25px" alt="Discord MegaCraft"></a>
+	<a href="https://discord.gg/JNRCCebDmB" target="_blank"><img src="img/discord.png" hidth="25px" height="25px" alt="Discord MegaCraft"></a>
 	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="25px" height="25px" alt="Twitter MegaCraft"></a>
 		</p>	
 		</div>
