--- a/votar.html
+++ b/votar.html
@@ -53,37 +53,38 @@
 			</div>
 				<div class="vote-container">
 				<div class="vote">
-					<h2>MinecraftServers.org</h2>
+					<h2>Site 1</h2>
 					<a href="https://minecraftservers.org/vote/589929" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
-					<h2>PlanetMinecraft.com</h2>
+					<h2>site 2</h2>
 					<a href="https://www.planetminecraft.com/server/megacraft-uma-aventura-pica-de-magia/vote/" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
-					<h2>Minecraft-MP.com</h2>
+					<h2>Site 3</h2>
 					<a href="https://minecraft-mp.com/server/294603/vote/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
-					<h2>TopMinecraftServers.org</h2>
+					<h2>Site 4</h2>
 					<a href="http://topminecraftservers.org/vote/12826"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
-					<h2>Mc-Server-List.com</h2>
+					<h2>Site 5</h2>
 					<a href="https://mc-server-list.com/server/794-MEGACRAFT/vote/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
-					<h2>Top.Org</h2>
+					<h2>Site 6</h2>
 					<a href="https://topg.org/minecraft-servers/server-610800"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
-					<h2>Minecraft-Server-List.com</h2>
+					<h2>Site 7</h2>
 					<a href="https://minecraft-server-list.com/server/485094/vote/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>
 				<div class="vote">
-					<h2>Minecraft-Server.net</h2>
+					<h2>Site 8</h2>
 					<a href="https://minecraft-server.net/vote/megacraftmc/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>					
+			<h2><font style="color:#FFA500;">Votos são válidos apenas se o jogador estiver online no servidor.</font></h2>
 			</div>
 		</div>
 <br />
