--- a/votar.html
+++ b/votar.html
@@ -83,8 +83,8 @@
 				<div class="vote">
 					<h2>Site 8</h2>
 					<a href="https://minecraft-server.net/vote/megacraftmc/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
-				</div>					
-			<h2><font style="color:#FFA500;">Votos são válidos apenas se o jogador estiver online no servidor.</font></h2>
+				</div>	<br />				
+			<h2><font style="color:#FFA500;">Votos são válidos apenas se o jogador estiver online no servidor.</font></h2><br /><br />
 			</div>
 		</div>
 <br />
