--- a/votar.html
+++ b/votar.html
@@ -84,7 +84,7 @@
 					<h2>Site 8</h2>
 					<a href="https://minecraft-server.net/vote/megacraftmc/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
 				</div>	<br />				
-			<h2><font style="color:#FFA500;">Votos são válidos apenas se o jogador estiver online no servidor.</font></h2><br /><br />
+			<h2><font style="color:#EAC117;">Votos são válidos apenas se o jogador estiver online no servidor.</font></h2><br /><br />
 			</div>
 		</div>
 <br />
