--- a/votar.html
+++ b/votar.html
@@ -53,36 +53,32 @@
 			</div>
 				<div class="vote-container">
 				<div class="vote">
-					<h2>Site 1</h2>
-					<a href="https://minecraftservers.org/vote/589929" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<a href="https://minecraftservers.org/vote/589929" target="_blank"><button class="vote-btn">Site 1</button></a>
 				</div>
 				<div class="vote">
-					<h2>site 2</h2>
-					<a href="https://www.planetminecraft.com/server/megacraft-uma-aventura-pica-de-magia/vote/" target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<a href="https://www.planetminecraft.com/server/megacraft-uma-aventura-pica-de-magia/vote/" target="_blank"><button class="vote-btn">Site 2</button></a>
 				</div>
 				<div class="vote">
-					<h2>Site 3</h2>
-					<a href="https://minecraft-mp.com/server/294603/vote/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<a href="https://minecraft-mp.com/server/294603/vote/"  target="_blank"><button class="vote-btn">Site 3</button></a>
 				</div>
 				<div class="vote">
-					<h2>Site 4</h2>
-					<a href="http://topminecraftservers.org/vote/12826"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<a href="http://topminecraftservers.org/vote/12826"  target="_blank"><button class="vote-btn">Site 4</button></a>
 				</div>
 				<div class="vote">
-					<h2>Site 5</h2>
-					<a href="https://mc-server-list.com/server/794-MEGACRAFT/vote/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<h2>
+					<a href="https://mc-server-list.com/server/794-MEGACRAFT/vote/"  target="_blank"><button class="vote-btn">Site 5</button></a></h2>
 				</div>
 				<div class="vote">
-					<h2>Site 6</h2>
-					<a href="https://topg.org/minecraft-servers/server-610800"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<h2>
+					<a href="https://topg.org/minecraft-servers/server-610800"  target="_blank"><button class="vote-btn">Site 6</button></a></h2>
 				</div>
 				<div class="vote">
-					<h2>Site 7</h2>
-					<a href="https://minecraft-server-list.com/server/485094/vote/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<h2>
+					<a href="https://minecraft-server-list.com/server/485094/vote/"  target="_blank"><button class="vote-btn">Site 7</button></a></h2>
 				</div>
 				<div class="vote">
-					<h2>Site 8</h2>
-					<a href="https://minecraft-server.net/vote/megacraftmc/"  target="_blank"><button class="vote-btn">Vote Agora!</button></a>
+					<h2>
+					<a href="https://minecraft-server.net/vote/megacraftmc/"  target="_blank"><button class="vote-btn">Site 8</button></a></h2>
 				</div>	<br />				
 			<h2><font style="color:#EAC117;">Votos são válidos apenas se o jogador estiver online no servidor.</font></h2><br /><br />
 			</div>
