--- a/votar.html
+++ b/votar.html
@@ -52,7 +52,7 @@
 			</div>
 				<div class="vote-container">
 				<div class="vote">
-					<a href="https://minecraftservers.org/vote/589929" target="_blank"><button class="vote-btn">MinecraftServers>org</button></a>
+					<a href="https://minecraftservers.org/vote/589929" target="_blank"><button class="vote-btn">MinecraftServers.org</button></a>
 				</div>
 				<div class="vote">
 					<a href="https://www.planetminecraft.com/server/megacraft-uma-aventura-pica-de-magia/vote/" target="_blank"><button class="vote-btn">PlanetMinecraft.com</button></a>
