--- a/loja.html
+++ b/loja.html
@@ -44,14 +44,43 @@
 			<div class="about-staff">
 				<div class="abt-epr">
 					<h1 class="fade">Loja</h1>
-					<h2>Em breve!</h2>	
+					<h2>Bem vindo!</h2>	
 				</div></div><br /><br />
 <div align="left">
-<p>
-EM BREVE AQUI OS PRODUTOS DA LOJA DO SERVIDOR
-</p>
-</div><br>
-<br>
+
+<h3>🔥 Escolha uma das categorias acima e efetue sua doação.</h3>
+
+<h2>✨ Por que precisamos das doações?</h2>
+
+<p>Manter um servidor de minecraft online não é barato. Existe vários custos mensais envolvidos, hospedagem , compra de plugins e pagamento de serviços. Para hospedar nosso servidor, possuímos uma máquina dedicada e hospedada no Brasil, nossa máquina possui um processador Ryzen 7 3700X com 64GB de memória RAM e disco de armazenamento  de 980GB NVMe, link dedicado de 1gb/s .</p>
+
+
+
+<h2>✨ O que eu posso fazer para apoiar o servidor?</h2>
+
+<p>Literalmente qualquer compra realizada na loja ajuda a manter o servidor online e sempre melhorando! As compras realizadas aqui não são pelos serviços prestados e sim uma doação para ajudar o servidor a continuar online, em troca, nada mais justo você receber prêmios por isso, certo?</p>
+
+
+
+<h2>💖 Sua doação é o que mantém o servidor online!</h2>
+
+
+
+
+
+
+<img src="https://dunb17ur4ymx4.cloudfront.net/wysiwyg/774950/b47cf3aaf4ba5a79a96f356c4d9077e571dbc76a.png" />
+
+
+
+<p> Para utilizar Mercado Pago, PicPay e Pix entre em contato com a Staff!<br />
+	Todas as compras através de cartão de crédito/débito são liberadas na hora.</p>
+
+
+<br><br>
+Tire suas dúvidas com a Staff, clique aqui!
+<br><br>
+Dúvidas? Acesse nosso discorde para suporte!
 </p>
 <br>
 <br>
