--- a/loja.html
+++ b/loja.html
@@ -69,7 +69,7 @@
 
 
 
-<img src="https://dunb17ur4ymx4.cloudfront.net/wysiwyg/774950/b47cf3aaf4ba5a79a96f356c4d9077e571dbc76a.png" />
+<p><img src="/img/formas-de-pagamento.jpg" /></p>
 
 
 
