--- a/loja.html
+++ b/loja.html
@@ -52,7 +52,7 @@
 
 <h2>✨ Por que precisamos das doações?</h2>
 
-<p>Manter um servidor de minecraft online não é barato. Existe vários custos mensais envolvidos, hospedagem , compra de plugins e pagamento de serviços. Para hospedar nosso servidor, possuímos uma máquina dedicada e hospedada no Brasil, nossa máquina possui um processador Ryzen 7 3700X com 64GB de memória RAM e disco de armazenamento  de 980GB NVMe, link dedicado de 1gb/s .</p>
+<p>Manter um servidor de minecraft online não é barato. Existe vários custos mensais envolvidos, hospedagem , compra de plugins e pagamento de serviços. Para hospedar nosso servidor, possuímos uma máquina dedicada e hospedada no Brasil, nossa máquina VPS está em constante atualização de hardware, também possuímos link dedicado de internet de 1gb/s .</p>
 
 
 
