--- a/contact.html
+++ b/contact.html
@@ -13,32 +13,22 @@
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link rel="stylesheet" href="css/stylesheet.css">
-	<link rel="stylesheet" href="css/home.css">
-        <script src="https://cdn.jsdelivr.net/gh/leonardosnt/mc-player-counter/dist/mc-player-counter.min.js"></script>
-	<script src="https://leonardosnt.github.io/mc-player-counter/dist/mc-player-counter.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/staff.css">
 	<link rel="shortcut icon" href="favicon.ico" />
 	<script data-ad-client="ca-pub-3723447797304917" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<style>
 
-		
-		</style>	
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3723447797304917"
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3723447797304917"
      crossorigin="anonymous"></script>
-	
-	
-	</head>
-<body>	
 
-	
-	
+</head>
+<body>
 	<div class="container">
 		<header>
 			<div class="header">
 				<div class="logo">
 					<!-- In the img folder, upload your logo. -->
 					<!-- Make sure to name it 'logo.png'! -->
-					<a href="/"><img src="img/logo.png" alt="MegaCraft"></a>
+					<a href="/"><img src="img/logo.png" alt="MyServer logo"></a>
 				</div>
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
@@ -48,21 +38,32 @@
 					<li><a href="rules.html" >Rules</a></li>
 					<li><a href="contact.html" >Contact US</a></li>
 				</ul>
-		</div>
-			<h1 class="animate">WELCOME TO <b>MEGACRAFT</b>!</h1>
-			<br /><br />
-			<div class="playercount">
-				<!-- Replace play.myserver.net with your IP address! -->
-				<!-- Make sure to do it for both examples below. -->
-				<p> <strong>SKYBLOCK SERVER WORLD!<br /> <b>IP: <span class="ip">megacraftmc.com.br</span></b> - Have <span data-playercounter-ip="138.0.144.224:25565">0</span> Players online.</strong></p>
 			</div>
-			
-			
-		<br /><br /><p style="text-align:center; color:#ffffff"><small>Visitors</small> <a href="https://www.hitwebcounter.com" target="_blank">
-		<img src="https://hitwebcounter.com/counter/counter.php?page=7666647&style=0007&nbdigits=7&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a></p>			
-		<br /><p style="text-align:center; color:#ffffff">Powered by <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</header>
-
+		<div class="main-content">
+			<div class="about-staff">
+				<div class="abt-epr">
+					<h1 class="fade">CONTACT US</h1>
+						
+				</div></div>
+<div align="center">
+<h2>IF U NEED HELP!</h2><br />	
+<p>SEND A MAIL!</p>
+<br>	
+<img src="https://static.wikia.nocookie.net/thetekkit/images/b/b2/Paper.png" width='160px' height='160px' />	
+<br>		
+<p>
+<code>tekkbrs@gmail.com</code>
+</p>
+</div>
+</p>
+<br />
+<br /><br /><br /><br />		</div>
+		<footer>
+			<p>Copyright &copy; TECHMA 2022</p>
+			<!-- Remove this part below if you want! -->
+			<p style="padding-right: 30px;">Powered By <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
+		</footer>
 	</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
 	<script src="js/main.js" type="text/javascript"></script>
