--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 			<div class="playercount">
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
-				<h2> <strong>SKYBLOCK SERVER WORLD!</h2>
-				<p><b>IP: <span class="ip">megacraftmc.com.br</span></b> - Have <span data-playercounter-ip="138.0.144.224:25565">0</span> Players online.</strong></p>
+				<p> <strong>SKYBLOCK SERVER WORLD!  <b>IP: <span class="ip">megacraftmc.com.br</span></b> - Have <span data-playercounter-ip="138.0.144.224:25565">0</span> Players online.</strong></p>
        				<code align="center">SYBLOCK - MCMMO - JOBS - ECONOMY - CRATES </code>
 			</div>
 			
