--- a/shop.html
+++ b/shop.html
@@ -93,11 +93,11 @@ Dúvidas? Acesse nosso discorde para suporte!
 	<a href="https://discord.gg/JNRCCebDmB" target="_blank"><img src="img/discord.png" hidth="35px" height="35px" alt="Discord MegaCraft"></a>
 	<a href="https://twitter.com/MegaCraftServer" target="_blank"><img src="img/twitter.png" hidth="35px" height="35px" alt="Twitter MegaCraft"></a>
 		</p>	
-		</div>
+		</div></div>
 		<footer>
-			<p>Copyright &copy; MegaCraft 2021</p>
+			<p>Copyright &copy; TECHMA 2022</p>
 			<!-- Remove this part below if you want! -->
-			<p style="padding-right: 30px;">Desenvolvido por <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
+			<p style="padding-right: 30px;">Powered By <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</footer>
 	</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
