--- a/vote.html
+++ b/vote.html
@@ -87,7 +87,7 @@
 <br />
 	</div>
 		<footer>
-			<p>Copyright &copy; TECHMA 2022</p>
+			<p>Copyright &copy; MEGACRAFT 2022</p>
 			<!-- Remove this part below if you want! -->
 			<p style="padding-right: 30px;">Powered By <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</footer>
