--- a/index.html
+++ b/index.html
@@ -42,11 +42,10 @@
 				</div>
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
-					<li><a href="donation.html" >Donation</a></li>
-					<li><a href="vote.html" >Votes</a></li>
-					<li><a href="shop.html" >Shop</a></li>
-					<li><a href="rules.html" >Rules</a></li>
-					<li><a href="contact.html" >Contact US</a></li>
+					<li><a href="votar.html" >Votar</a></li>
+					<li><a href="loja.html" >loja</a></li>
+					<li><a href="regras.html" >regras</a></li>
+					<li><a href="contato.html" >Contato</a></li>
 				</ul>
 		</div>
 			<h1 class="animate">WELCOME TO <b>MEGACRAFT</b>!</h1>
