--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
 					<li><a href="contato.html" >Contato</a></li>
 				</ul>
 		</div>
-			<h1 class="animate">WELCOME TO <b>MEGACRAFT</b>!</h1>
+			<h1 class="animate">BEM VINDO AO <b>MEGACRAFT</b>!</h1>
 			<br /><br />
 			<div class="playercount">
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
-				<p> <strong>SKYBLOCK SERVER WORLD!  <br /><b>IP: <span class="ip">megacraftmc.com.br</span></b> - Have <span data-playercounter-ip="138.0.144.224:25565">0</span> Players online.</strong></p>
-       				<code align="center">SYBLOCK - MCMMO - JOBS - ECONOMY - CRATES </code>
+				<p> <strong>SERVIDOR ONLINE DE SKYBLOCK!  <br /><b>IP: <span class="ip">megacraftmc.com.br</span></b> - Have <span data-playercounter-ip="138.0.144.224:25565">0</span> Players online.</strong></p>
+       				<code align="center">SYBLOCK - MCMMO - JOBS - ECONOMIA - CRATES </code>
 			</div>
 			
 			
 		<br /><br /><p style="text-align:center; color:#ffffff"><small>Visitors</small> <a href="https://www.hitwebcounter.com" target="_blank">
 		<img src="https://hitwebcounter.com/counter/counter.php?page=7666647&style=0007&nbdigits=7&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a></p>			
-		<br /><p style="text-align:center; color:#ffffff">Powered by <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
+		<br /><p style="text-align:center; color:#ffffff">Desenvolvido por: <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</header>
 
 	</div>
