--- a/votar.html
+++ b/votar.html
@@ -32,23 +32,22 @@
 				</div>
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
-					<li><a href="donation.html" >Donation</a></li>
-					<li><a href="vote.html" >Votes</a></li>
-					<li><a href="shop.html" >Shop</a></li>
-					<li><a href="rules.html" >Rules</a></li>
-					<li><a href="contact.html" >Contact US</a></li>
+					<li><a href="votar.html" >Votar</a></li>
+					<li><a href="loja.html" >loja</a></li>
+					<li><a href="regras.html" >regras</a></li>
+					<li><a href="contato.html" >Contato</a></li>
 				</ul>
 			</div>
 		</header>
 		<div class="main-content">
 			<div class="about-staff">
 				<div class="vote-section">
-					<h2 id="vote-section">Vote for TECHMA</h1></h2>
-					<h3>With each vote you receive a key to open a crates in Spawn and earn money or items.<br />
-					The more you vote, the more prizes and keys you can win. <br />
-					Every <font style="color:Tomato;">10 votes</font> you receive 5 keys <font style="color:Tomato;">Vote</font> and 500 Money.<br />
-					Every <font style="color:Tomato;">20 votes</font> you receive 10 keys <font style="color:Tomato;">Vote</font> and 1k Money.<br />
-					Every <font style="color:Tomato;">40 votes</font> you receive 15 keys <font style="color:Tomato;">Vote</font> and 2k Money.<br />
+					<h2 id="vote-section">Vote for MEGACRAFT</h1></h2>
+					<h3>A cada voto você recebe chaves para abrir as coisas no spawn e muitas recompensas!<br />
+					Quando mais você votar mais recompensas você vai ganhar. <br />
+					A cada <font style="color:Tomato;">10 votes</font> você recebe 5 keys <font style="color:Tomato;">Vote</font> e 500 de Money.<br />
+					A cada <font style="color:Tomato;">20 votes</font> você recebe 10 keys <font style="color:Tomato;">Vote</font> e 1k de Money.<br />
+					A cada <font style="color:Tomato;">40 votes</font> você recebe 15 keys <font style="color:Tomato;">Vote</font> e 2k de Money.<br />
 				</div>
 			</div>
 				<div class="vote-container">
@@ -81,7 +80,7 @@
 					<a href="https://minecraft-server.net/vote/megacraftmc/"  target="_blank"><button class="vote-btn">Minecraft-Server.net</button></a></h2>
 				</div>			
 			</div>
-						<h3><font style="color:#EAC117;">Votes are valid only if the player is online on the server.</font></h3><br />
+						<h3><font style="color:#EAC117;">Os votos são válidos apenas se o jogador estiver online no servidor.</font></h3><br />
 
 		</div>
 <br />
@@ -89,7 +88,7 @@
 		<footer>
 			<p>Copyright &copy; MEGACRAFT 2022</p>
 			<!-- Remove this part below if you want! -->
-			<p style="padding-right: 30px;">Powered By <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
+			<p style="padding-right: 30px;">Desenvolvido por: <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</footer>
 	</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
