Update and rename contact.html to contato.html

--- a/contato.html
+++ b/contato.html
@@ -32,23 +32,22 @@
 				</div>
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
-					<li><a href="donation.html" >Donation</a></li>
-					<li><a href="vote.html" >Votes</a></li>
-					<li><a href="shop.html" >Shop</a></li>
-					<li><a href="rules.html" >Rules</a></li>
-					<li><a href="contact.html" >Contact US</a></li>
+					<li><a href="votar.html" >Votar</a></li>
+					<li><a href="loja.html" >loja</a></li>
+					<li><a href="regras.html" >regras</a></li>
+					<li><a href="contato.html" >Contato</a></li>
 				</ul>
 			</div>
 		</header>
 		<div class="main-content">
 			<div class="about-staff">
 				<div class="abt-epr">
-					<h1 class="fade">CONTACT US</h1>
+					<h1 class="fade">CONTATO</h1>
 						
 				</div></div>
 <div align="center">
-<h2>IF U NEED HELP!</h2><br />	
-<p>SEND A MAIL!</p>
+<h2>SE VOCÊ PRECISA DE AJUDA!</h2><br />	
+<p>ENVIE UM EMAIL!</p>
 <br>	
 <img src="https://static.wikia.nocookie.net/thetekkit/images/b/b2/Paper.png" width='160px' height='160px' />	
 <br>		
@@ -60,9 +59,9 @@
 <br />
 <br /><br /><br /><br />		</div>
 		<footer>
-			<p>Copyright &copy; TECHMA 2022</p>
+			<p>Copyright &copy; MEGACRAFT 2022</p>
 			<!-- Remove this part below if you want! -->
-			<p style="padding-right: 30px;">Powered By <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
+			<p style="padding-right: 30px;">Desenvolvido por: <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</footer>
 	</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
