--- a/loja.html
+++ b/loja.html
@@ -33,19 +33,18 @@
 				</div>
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
-					<li><a href="donation.html" >Donation</a></li>
-					<li><a href="vote.html" >Votes</a></li>
-					<li><a href="shop.html" >Shop</a></li>
-					<li><a href="rules.html" >Rules</a></li>
-					<li><a href="contact.html" >Contact US</a></li>
+					<li><a href="votar.html" >Votar</a></li>
+					<li><a href="loja.html" >loja</a></li>
+					<li><a href="regras.html" >regras</a></li>
+					<li><a href="contato.html" >Contato</a></li>
 				</ul>
 			</div>
 		</header>
 		<div class="main-content">
 			<div class="about-staff">
 				<div class="abt-epr">
-					<h1 class="fade">Shop</h1>
-					<h2>Welcome!</h2>	
+					<h1 class="fade">Loja</h1>
+					<h2>Bem vindo!</h2>	
 				</div></div><br /><br />
 <div align="left">
 
@@ -95,9 +94,9 @@ Dúvidas? Acesse nosso discorde para suporte!
 		</p>	
 		</div></div>
 		<footer>
-			<p>Copyright &copy; TECHMA 2022</p>
+			<p>Copyright &copy; MEGACRAFT 2022</p>
 			<!-- Remove this part below if you want! -->
-			<p style="padding-right: 30px;">Powered By <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
+			<p style="padding-right: 30px;">Desenvolvido por: <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</footer>
 	</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
