--- a/regras.html
+++ b/regras.html
@@ -43,8 +43,8 @@
 		<div class="main-content">
 			<div class="about-staff">
 				<div class="abt-epr">
-					<h1 class="fade">Rules</h1>
-					<h3>In order for the server to have a good quality, we need to respect the rules, please read carefully!</h3>	
+					<h1 class="fade">Regras</h1>
+					<h3>Para que o servidor tenha uma boa qualidade, precisamos respeitar as regras, leia com atenção!</h3>	
 				</div></div>
 <div align="left">
 <ol style="font-size: 18px;">
