--- a/doar.html
+++ b/doar.html
@@ -32,23 +32,22 @@
 				</div>
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
-					<li><a href="donation.html" >Donation</a></li>
-					<li><a href="vote.html" >Votes</a></li>
-					<li><a href="shop.html" >Shop</a></li>
-					<li><a href="rules.html" >Rules</a></li>
-					<li><a href="contact.html" >Contact US</a></li>
+					<li><a href="votar.html" >Votar</a></li>
+					<li><a href="loja.html" >loja</a></li>
+					<li><a href="regras.html" >regras</a></li>
+					<li><a href="contato.html" >Contato</a></li>
 				</ul>
 			</div>
 		</header>
 		<div class="main-content">
 			<div class="about-staff">
 				<div class="abt-epr">
-					<h1 class="fade">DONATE</h1>
+					<h1 class="fade">DOAR</h1>
 						
 				</div></div>
 <div align="center">
-<h2>HELP THE SERVER!</h2><br />	
-<p>PLEASE HELP US WITH A DONATION!</p>
+<h2>AJUDE O SERVIDOR!</h2><br />	
+<p>POR FAVOR AJUDE-NOS COM UMA DOAÇÃO!</p>
 <br>	
 <img src="https://clipart-best.com/img/minecraft/minecraft-clip-art-21.png" width='386px' height='217px' />	
 <br>		
@@ -64,9 +63,9 @@
 <br />
 		</div>
 		<footer>
-			<p>Copyright &copy; TECHMA 2022</p>
+			<p>Copyright &copy; MEGACRAFT 2022</p>
 			<!-- Remove this part below if you want! -->
-			<p style="padding-right: 30px;">Powered By <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
+			<p style="padding-right: 30px;">Desenvolvido por: <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
 		</footer>
 	</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
