--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<div class="playercount">
 				<!-- Replace play.myserver.net with your IP address! -->
 				<!-- Make sure to do it for both examples below. -->
-				<p> <strong>SERVIDOR ONLINE DE SKYBLOCK!  <br /><b>IP: <span class="ip">megacraftmc.com.br</span></b> - Temos <span data-playercounter-ip="138.0.144.224:25565">0</span> Jogadores online.</strong></p>
+				<p> <strong>O MELHOR SERVIDOR DE SKYBLOCK DO BRASIL!  <br /><b>IP: <span class="ip">megacraftmc.com.br</span></b> - Temos <span data-playercounter-ip="138.0.144.224:25565">0</span> Jogadores Online.</strong></p>
        				<code align="center">SYBLOCK - MCMMO - JOBS - ECONOMIA - CRATES </code>
 			</div>
 			
