--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
 					<li><a href="votar.html" >Votar</a></li>
-					<li><a href="loja.html" >loja</a></li>
+					<li><a href="https://megacraftservermc.tebex.io" target="_blank">loja</a></li>
+					<li><a href="https://discord.gg/xHtqBcCD" target="_blank">discord</a></li>
 					<li><a href="regras.html" >regras</a></li>
 					<li><a href="contato.html" >Contato</a></li>
 				</ul>
@@ -60,7 +61,7 @@
 			
 		<br /><br /><p style="text-align:center; color:#ffffff"><small>Visitors</small> <a href="https://www.hitwebcounter.com" target="_blank">
 		<img src="https://hitwebcounter.com/counter/counter.php?page=7666647&style=0007&nbdigits=7&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a></p>			
-		<br /><p style="text-align:center; color:#ffffff">Desenvolvido por: <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
+		<br /><p style="text-align:center; color:#ffffff">Desenvolvido por: <a href="https://discord.gg/xHtqBcCD" target="_blank">TEKBRS</a></p>
 		</header>
 
 	</div>
