--- a/regras.html
+++ b/regras.html
@@ -34,7 +34,8 @@
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
 					<li><a href="votar.html" >Votar</a></li>
-					<li><a href="loja.html" >loja</a></li>
+					<li><a href="https://megacraftservermc.tebex.io" target="_blank">loja</a></li>
+					<li><a href="https://discord.gg/xHtqBcCD" target="_blank">discord</a></li>
 					<li><a href="regras.html" >regras</a></li>
 					<li><a href="contato.html" >Contato</a></li>
 				</ul>
@@ -106,7 +107,7 @@
 		<footer>
 			<p>Copyright &copy; MEGACRAFT 2022</p>
 			<!-- Remove this part below if you want! -->
-			<p style="padding-right: 30px;">Desenvolvido por: <a href="https://discord.gg/JNRCCebDmB" target="_blank">TEKBRS</a></p>
+			<p style="padding-right: 30px;">Desenvolvido por: <a href="https://discord.gg/xHtqBcCD" target="_blank">TEKBRS</a></p>
 		</footer>
 	</div>
 	<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
