--- a/votar.html
+++ b/votar.html
@@ -45,9 +45,9 @@
 					<h2 id="vote-section">Vote for MEGACRAFT</h1></h2>
 					<h3>A cada voto você recebe chaves para abrir as coisas no spawn e muitas recompensas!<br />
 					Quando mais você votar mais recompensas você vai ganhar. <br />
-					A cada <font style="color:Tomato;">10 votes</font> você recebe 5 keys <font style="color:Tomato;">Vote</font> e 500 de Money.<br />
-					A cada <font style="color:Tomato;">20 votes</font> você recebe 10 keys <font style="color:Tomato;">Vote</font> e 1k de Money.<br />
-					A cada <font style="color:Tomato;">40 votes</font> você recebe 15 keys <font style="color:Tomato;">Vote</font> e 2k de Money.<br />
+					A cada <font style="color:Tomato;">10 votos</font> você recebe 5 Chaves <font style="color:Tomato;">Voto</font> e 500 de Money.<br />
+					A cada <font style="color:Tomato;">20 votos</font> você recebe 10 Chaves <font style="color:Tomato;">Voto</font> e 1k de Money.<br />
+					A cada <font style="color:Tomato;">40 votos</font> você recebe 15 Chaves <font style="color:Tomato;">Voto</font> e 2k de Money.<br />
 				</div>
 			</div>
 				<div class="vote-container">
