--- a/loja.html
+++ b/loja.html
@@ -1,12 +1,12 @@
 <html>
 <head>
 	<title>Megacraft - Skyblock Server - Official Website</title>
-	<meta name="description" content="Megacraft - Skyblock World - IP 'megacraft.com.br'.">
+	<meta name="description" content="Megacraft - Skyblock World - IP 'megacraftmc.com.br'.">
 	<meta name="keywords" content="Megacraft, megacraft.com.br, Minecraft Server, Minecraft, Game, Skyblock, Sky, Play, Oficial">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="Megacraft - Skyblock World - Official Website">
 	<meta property="og:site_name" content="Megacraft">
-	<meta property="og:description" content="Megacraft - Skyblock World - IP 'megacraft.com.br'.">
+	<meta property="og:description" content="Megacraft - Skyblock World - IP 'megacraftmc.com.br'.">
 	<meta property="og:image" content="img/banner.jpg">
 	<meta property="og:url" content="https://bybilly.uk/">
 	<meta name="twitter:card" content="summary_large_image">
