--- a/apoiadores.html
+++ b/apoiadores.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-	<title>Mega Craft - Apoiadores</title>
-	<meta name="description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'megacraftmc.com.br'.">
-	<meta name="keywords" content="MegaCraft, MegaCraftMC.com.br, Minecraft Server, Minecraft, Game, SlimeFun, Play, Towny, MCMMO, Oficial">
+	<title>Megacraft - Skyblock Server - Official Website</title>
+	<meta name="description" content="Megacraft - Skyblock World - IP 'megacraftmc.com.br'.">
+	<meta name="keywords" content="Megacraft, megacraft.com.br, Minecraft Server, Minecraft, Game, Skyblock, Sky, Play, Oficial">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:title" content="Mega Craft - Apoiadores">
-	<meta property="og:site_name" content="Mega Craft">
-	<meta property="og:description" content="Mega Craft é um novo e incrível servidor do Minecraft. Você pode entrar com o IP 'megacraftmc.com.br'.">
-	<meta property="og:image" content="https://megacraftmc.com.br/img/mcbanner.jpg">
+	<meta property="og:title" content="Megacraft - Skyblock World - Official Website">
+	<meta property="og:site_name" content="Megacraft">
+	<meta property="og:description" content="Megacraft - Skyblock World - IP 'megacraftmc.com.br'.">
+	<meta property="og:image" content="img/banner.jpg">
 	<meta property="og:url" content="https://bybilly.uk/">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta charset="utf-8">
