--- a/doar.html
+++ b/doar.html
@@ -33,9 +33,9 @@
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
 					<li><a href="votar.html" >Votar</a></li>
-					<li><a href="loja.html" >loja</a></li>
 					<li><a href="regras.html" >regras</a></li>
 					<li><a href="contato.html" >Contato</a></li>
+					<li><a href="https://megacraftservermc.tebex.io" target="_blank">loja</a></li>
 				</ul>
 			</div>
 		</header>
