--- a/equipe.html
+++ b/equipe.html
@@ -34,10 +34,10 @@
 				</div>
 				<ul class="nav">
 					<li><a href="/">Home</a></li>
-					<li><a href="regras.html" >Regras</a></li>
-					<li><a href="votar.html">Votar</a></li>
-					<li><a href="loja.html" >Loja</a></li>
-					<li><a href="suporte.html" >Suporte</a></li>
+					<li><a href="votar.html" >Votar</a></li>
+					<li><a href="regras.html" >regras</a></li>
+					<li><a href="contato.html" >Contato</a></li>
+					<li><a href="https://megacraftservermc.tebex.io" target="_blank">loja</a></li>
 				</ul>
 			</div>
 		</header>
