--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 			</div>
 			
 			
-		<br /><br /><p style="text-align:center; color:#ffffff"><small>Visitors</small> <a href="https://www.hitwebcounter.com" target="_blank">
+		<br /><br /><p style="text-align:center; color:#ffffff"><small>Visitantes</small> <a href="https://www.hitwebcounter.com" target="_blank">
 		<img src="https://hitwebcounter.com/counter/counter.php?page=7666647&style=0007&nbdigits=7&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a></p>			
-		<br /><p style="text-align:center; color:#ffffff">Desenvolvido por: <a href="https://discord.gg/xHtqBcCD" target="_blank">TEKBRS</a> - <a href="https://discord.gg/xHtqBcCD" target="_blank">Discord</a></p>
+		<br /><p style="text-align:center; color:#ffffff">Copyright © MEGACRAFT 2022 - Desenvolvido por: <a href="https://discord.gg/xHtqBcCD" target="_blank">TEKBRS</a>
+		<br /><a href="https://discord.gg/xHtqBcCD" target="_blank">Discord</a></p> - <a href="apoiadores.html" >Apoiadores</a></p> - <li><a href="equipe.html" >Equipe</a></li>
 		</header>
 
 	</div>
