--- a/equipe.html
+++ b/equipe.html
@@ -92,19 +92,19 @@
 					<div>
 						<h3>INDISPONÍVEL</h3>
 						<div class="manager">Moderador</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="https://r.nmc1.net/skin/body.png?id=5f913bd41b769234&model=classic&width=120&height=240">
 					</div>
 
 					<div>
 						<h3>INDISPONÍVEL</h3>
 						<div class="admin">Ajudante</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="https://r.nmc1.net/skin/body.png?id=5f913bd41b769234&model=classic&width=120&height=240">
 					</div>
 
 					<div>
 						<h3>INDISPONÍVEL</h3>
 						<div class="admin">Ajudante</div>
-						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
+						<img src="https://r.nmc1.net/skin/body.png?id=5f913bd41b769234&model=classic&width=120&height=240">
 					</div>
 				</div>
 			</div>
